--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -4,6 +4,8 @@
     <h1>My Cart</h1>
   </header>
 
+  <% if enhanced_cart.length > 0 %>
+
   <div class="panel panel-default items">
     <table class="table table-bordered">
       <thead>
@@ -48,5 +50,8 @@
       <% end %>
     </div>
   </div>
+  <% else %>
+    <p class ="alert alert-danger"> Empty Cart. Please add an <a href ="/"> item</a> to your order.
+  <% end %>      
 
 </section>
