--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -85,4 +85,27 @@ main section.products-show {
   }
 }
 
+.dashboard {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 3rem;
+
+  &__info {
+    flex-grow: 1;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 6rem;
+    border-radius: 5px;
+    background: crimson;
+  }
+
+  &__count {
+    font-size: 56px;
+    color: #fff;
+  }
+}
 
