--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -109,3 +109,17 @@ main section.products-show {
   }
 }
 
+.login-links {
+  width: max-content;
+  top: 0;
+  right: 0;
+  padding: 1.5rem 2rem;
+  color: #fff;
+  background: grey;
+  border-radius: 5px;
+
+  & a,
+  & a:visited {
+    color: #fff;
+  }
+}
