--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,10 +1,30 @@
-<h1>Sign up</h1>
+<section class="admin-products-new">
+<header class="page-header">
+  <h1>Create a New Account</h1>
+</header>
+
+<div cleass="row">
+<div class="col-sm-6 col-sm-offset-1">
 
 <%= form_for :user, url: '/users' do |f| %>
-
-  Name: <%= f.text_field :name %>
-  Email: <%= f.text_field :email %>
-  Password: <%= f.password_field :password %>
-  Password Confirmation: <%= f.password_field :password_confirmation %>
+  <div class="form-group">
+    First name: <%= f.text_field :name %>
+  </div>
+  <div class="form-group">
+    Last name: <%= f.text_field :last_name %>
+  </div>
+  <div class="form-group">
+    Email: <%= f.text_field :email %>
+  </div>
+  <div class="form-group">
+    Password: <%= f.password_field :password %>
+  </div>
+  <div class="form-group">
+    Password Confirmation: <%= f.password_field :password_confirmation %>
+  </div>
   <%= f.submit "Submit" %>
 <% end %>
+
+</div>
+</div>
+</section>
