fix the sold out badge styling

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -42,12 +42,12 @@ main section.categories-show {
 
       aside.sold-out {
         position: absolute;
-        position: absolute;
         top:0;
         left: 0;
         padding: 1em;
         background-color: lightpink;
         border-top-right-radius: 1px;
+        border-top-left-radius: 4px;
         border-bottom-right-radius: 10px;
         font-size: 0.8em;
       }
