--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -22,7 +22,7 @@
   </aside>
 <% if product.quantity == 0 %>
   <aside class="sold-out"> 
-  Sold Out
+  SOLD OUT!
   </aside>
 <% end %>
 </article>
